<resources>
    <string name="app_name">Accelerometer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="accelerometer">Accelerometers Data</string>
    <string name="title_activity_start">Start</string>
    <string name="accelerometer_data">Accelerometer Data</string>
    <string name="time">Time</string>
    <string name="x_axis">X-Axis</string>
    <string name="y_axis">Y-Axis</string>
    <string name="z_axis">Z-Axis</string>
    <string name="acceleration_data">Acceleration Data</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="exit_button">Exit</string>
</resources>
