
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF8000">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acceleration_data"
            android:singleLine="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="*">

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:gravity="center"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/x_axis"
                android:gravity="center"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/y_axis"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/z_axis"
                android:gravity="center"
                android:visibility="visible" />

        </TableRow>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:overScrollMode="always"
            android:isScrollContainer="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="outsideInset"
            android:id="@+id/scrollView"
            android:scrollIndicators="right">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:stretchColumns="*"
                android:id="@+id/tableLayout">

                <TableRow android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/time"
                        android:maxWidth="20dp"
                        android:gravity="center"
                        android:textAlignment="gravity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/x_axis"
                        android:gravity="center"
                        android:singleLine="false"
                        android:maxWidth="20dp"
                        android:textAlignment="gravity" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/y_axis"
                        android:gravity="center"
                        android:maxWidth="20dp"
                        android:textAlignment="gravity" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/z_axis"
                        android:gravity="center"
                        android:maxWidth="20dp"
                        android:textAlignment="gravity" />

                </TableRow>
            </TableLayout>
        </ScrollView>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer_text"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:width="125dp"
            android:height="60dp"
            android:onClick="onStartClick" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            android:width="125dp"
            android:height="60dp"
            android:onClick="onStopClick" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/exit_button">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="125dp"
            android:height="60dp"
            android:id="@+id/button"
            android:text="@string/exit_button"
            android:onClick="onExitClick" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_info"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/date"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />


</LinearLayout>


